# sqlitewrite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.cc  jsonhelper.cc  jsontests.cc  meson.build  minipsql.cc  pqdemo.cc  psqlwriter.cc  sqlwriter.cc  sqlwriter.hh  testrunner.cc
.github/workflows/: cmake.yml
